# dioxus-i18n

./: Cargo.toml  readme.md
examples/: en-US.json  freya_demo.rs
src/: lib.rs  main.rs
